--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -6,11 +6,12 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  docker-tag: ${{ github.ref_name }}-${GITHUB_SHA::7}
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      docker-tag: orobtsovv/demo-image:${{ github.ref_name }}-${GITHUB_SHA::8}
 
     steps:
       - uses: actions/checkout@v4
@@ -21,5 +22,24 @@ jobs:
 
       - name: Run Maven clean install
         run: mvn clean install
-      - name: Build Docker image with tag ${{ env.docker-tag }}
-        run: docker build --tag ${{ env.docker-tag }} .
+      - name: Build Docker image
+        run: docker build --tag ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:${{ env.docker-tag }} .
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push the Docker image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:${{ env.docker-tag }}
+
+        if: github.ref == 'refs/heads/main'
+      - name: Push latest image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:latest
