--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -22,8 +22,11 @@ jobs:
 
       - name: Run Maven clean install
         run: mvn clean install
-      - name: Build Docker image
-        run: docker build --tag ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:${{ env.docker-tag }} .
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: java-maven-project
+          path: target/*.jar
 
 
   deploy:
@@ -31,6 +34,13 @@ jobs:
     needs: build
 
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: java-maven-project
+          path: .
+      - name: Build Docker image
+        run: docker build --tag ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:${{ env.docker-tag }} .
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
