update build workflow

--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -34,5 +34,7 @@ jobs:
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:${{ env.docker-tag }}
 
         if: github.ref == 'refs/heads/main'
+      - name: Build Docker image
+        run: docker build --tag ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:latest .
       - name: Push latest image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:latest
