update build workflow

--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 env:
-  docker-tag: ${{ github.ref_name }}-${GITHUB_SHA::7}
+  docker-tag: ${GITHUB_REF##*/}-${GITHUB_SHA::7}
 
 jobs:
   build:
