--- a/.github/workflows/run-workflow.yml
+++ b/.github/workflows/run-workflow.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       docker-tag:
         description: 'Docker image tag'
-        required: false
+        required: true
         default: 'latest'
         type: string
 
@@ -30,5 +30,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: Docker image pull and run
         run: |
-          docker pull ${{ env.docker-tag }}
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:${{ env.docker-tag }}
           docker run ${{ env.docker-tag }} ${{ env.first-num }} ${{ env.second-num }}
