--- a/mychart/templates/deployment.yaml
+++ b/mychart/templates/deployment.yaml
@@ -43,11 +43,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /api/actuator/health
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /api/actuator/health
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
