--- a/mychart/values.yaml
+++ b/mychart/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: orobtsovv/demo-image
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: main-71eec55
+  tag: helmtest
 
 imagePullSecrets: []
 nameOverride: ""
@@ -41,7 +41,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8080
 
 ingress:
   enabled: false
