--- a/mychart/values.yaml
+++ b/mychart/values.yaml
@@ -10,6 +10,10 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: helmtest
 
+probes:
+  liveness: /api/actuator/health
+  readiness: /api/actuator/health
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
