--- a/mychart/templates/deployment.yaml
+++ b/mychart/templates/deployment.yaml
@@ -43,12 +43,14 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: {{ .Values.probes.liveness }}
+              path: {{ .Values.probes.liveness.path }}
               port: http
+            initialDelaySeconds: {{ .Values.probes.liveness.initDelay }}
           readinessProbe:
             httpGet:
-              path: {{ .Values.probes.readiness }}
+              path: {{ .Values.probes.readiness.path }}
               port: http
+            initialDelaySeconds: {{ .Values.probes.readiness.initDelay }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
