--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -12,11 +12,22 @@ env:
 jobs:
   autotest:
     needs: build
-    uses: central-university-dev/hse-ab-cicd-hw/.github/workflows/autotests.yml@main
-    with:
-      chart-path: ./mychart 
-      image-name: orobtsovv/demo-image 
-      image-tag: ${{ needs.build.outputs.docker-tag }} 
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: create an issue
+        uses: dacbd/create-issue-action@main
+        with:
+          token: ${{ github.token }}
+          title: Autotests results
+          body: issue for autotests
+
+      - name: autotests
+        uses: central-university-dev/hse-ab-cicd-hw/.github/workflows/autotests.yml@main
+        with:
+          chart-path: ./mychart
+          image-name: orobtsovv/demo-image
+          image-tag: ${{ needs.build.outputs.docker-tag }}
   
   build:
     runs-on: ubuntu-latest
