--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   autotest:
-    needs: [build, issue-create]
+    needs: [build]
     uses: central-university-dev/hse-ab-cicd-hw/.github/workflows/autotests.yml@main
     with:
       chart-path: ./mychart
