--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -12,6 +12,7 @@ env:
 jobs:
   autotest:
     needs: [build]
+    if: github.event_name == 'pull_request'
     uses: central-university-dev/hse-ab-cicd-hw/.github/workflows/autotests.yml@main
     with:
       chart-path: ./mychart
