fix some issues
fixed:
1. CurrencyService.ratesPath in properties
2. toString -> name
3. BigDecimal arithmetic
4. Currency param now mapped by Spring and mismatch handled by MethodArgumentTypeMismatchConverter

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 rates-service:
-  name: rates
-  port: 8080
+  url: http://localhost:8081
+  rates-path: ${rates-service.url}/rates
 
 logging:
   level:
