--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -2,7 +2,7 @@ name: build-workflow
 run-name: ${{ github.actor }} ${{ github.event_name }}
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "hw4" ]
   pull_request:
     branches: [ "feedback" ]
 
@@ -10,14 +10,14 @@ env:
   docker-tag: ${{ github.head_ref || github.ref_name }}-${GITHUB_SHA::7}
 
 jobs:
-  autotest:
-    needs: [build]
-    if: github.event_name == 'pull_request'
-    uses: central-university-dev/hse-ab-cicd-hw/.github/workflows/autotests.yml@main
-    with:
-      chart-path: ./mychart
-      image-name: orobtsovv/demo-image
-      image-tag: ${{ needs.build.outputs.docker-tag }}
+#  autotest:
+#    needs: [build]
+#    if: github.event_name == 'pull_request'
+#    uses: central-university-dev/hse-ab-cicd-hw/.github/workflows/autotests.yml@main
+#    with:
+#      chart-path: ./mychart
+#      image-name: orobtsovv/demo-image
+#      image-tag: ${{ needs.build.outputs.docker-tag }}
   
   build:
     runs-on: ubuntu-latest
@@ -31,25 +31,49 @@ jobs:
       - name: Run Maven clean install
         run: mvn clean install
 
-      - name: Build Docker image
-        run: docker build --tag ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:${{ env.docker-tag }} .
+      - name: Build Docker converter image
+        run: docker build --tag ${{ secrets.DOCKERHUB_USERNAME }}/converter:${{ env.docker-tag }} ./converter
+      - name: Build Docker accounts image
+        run: docker build --tag ${{ secrets.DOCKERHUB_USERNAME }}/accounts:${{ env.docker-tag }} ./accounts
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Push the Docker image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:${{ env.docker-tag }}
-
-      - name: Tag Docker image as latest
-        run: |
-          docker image tag \
-            ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:${{ env.docker-tag }} \
-            ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:latest
-        if: github.ref == 'refs/heads/main'
-      - name: Push latest image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/demo-image:latest
-        if: github.ref == 'refs/heads/main'
-
+      - name: Push the converter image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/converter:${{ env.docker-tag }}
+      - name: Push the accounts image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/accounts:${{ env.docker-tag }}
     outputs:
       docker-tag: ${{ env.docker-tag }}
+
+    tag_and_push_latest:
+      needs: build
+      runs-on: ubuntu-latest
+      if: github.ref == 'refs/heads/main'
+      steps:
+        - uses: actions/checkout@v4
+        - name: Login to Docker Hub
+          uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+        - name: Tag Docker converter image as latest
+          run: |
+            docker image tag \
+              ${{ secrets.DOCKERHUB_USERNAME }}/converter:${{ env.docker-tag }} \
+              ${{ secrets.DOCKERHUB_USERNAME }}/converter:latest
+
+        - name: Push latest converter image
+          run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/converter:latest
+
+        - name: Tag Docker accounts image as latest
+          run: |
+            docker image tag \
+              ${{ secrets.DOCKERHUB_USERNAME }}/accounts:${{ env.docker-tag }} \
+              ${{ secrets.DOCKERHUB_USERNAME }}/accounts:latest
+
+        - name: Push latest accounts image
+          run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/accounts:latest
