--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -2,7 +2,7 @@ name: build-workflow
 run-name: ${{ github.actor }} ${{ github.event_name }}
 on:
   push:
-    branches: [ "main", "hw4" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "feedback" ]
 
@@ -45,21 +45,11 @@ jobs:
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/converter:${{ env.docker-tag }}
       - name: Push the accounts image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/accounts:${{ env.docker-tag }}
+
     outputs:
       docker-tag: ${{ env.docker-tag }}
 
-  tag_and_push_latest:
-    needs: build
-    runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v4
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Tag Docker converter image as latest
         run: |
           docker image tag \
