--- a/converter/src/main/resources/application.yml
+++ b/converter/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 rates-service:
-  url: ${RATES_URL:http://localhost:53999}
+  url: ${RATES_URL:http://localhost:63621}
   rates-path: ${rates-service.url}/rates
 
 spring:
   security:
     oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: ${KEYCLOAK_URL:http://localhost:63608}/realms/hse/protocol/openid-connect/certs
       client:
         registration:
           converter:
@@ -12,13 +15,13 @@ spring:
             client-secret: ${CLIENT_SECRET}
             authorization-grant-type: client_credentials
             client-authentication-method: basic
-            provider: converter
+            provider: keycloak
         provider:
-          converter:
-            token-uri: ${KEYCLOAK_URL:http://localhost:53993}/realms/${KEYCLOAK_REALM:hse}/protocol/openid-connect/token
+          keycloak:
+            token-uri: ${KEYCLOAK_URL:http://localhost:63608}/realms/${KEYCLOAK_REALM:hse}/protocol/openid-connect/token
 
 logging:
   level:
     org:
-      springframework: INFO
+      springframework: DEBUG
 
