--- a/mychart/templates/deployment.yaml
+++ b/mychart/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            {{- toYaml .Values.extraEnv | indent 12 }}
+            {{- toYaml .Values.extraEnv | nindent 12 }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
