--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>accounts</module>
         <module>converter</module>
+        <module>proto-models</module>
     </modules>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
