--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -22,6 +22,18 @@
         </dependency>
 
         <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>proto-models</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-client-spring-boot-starter</artifactId>
+            <version>3.0.0.RELEASE</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
@@ -47,7 +59,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>rates-api.yml</inputSpec>
+                            <inputSpec>${project.basedir}/src/main/resources/rates-api.yaml</inputSpec>
                             <language>java</language>
                             <library>resttemplate</library>
                             <output>${project.build.directory}/generated-sources</output>
