--- a/converter/pom.xml
+++ b/converter/pom.xml
@@ -19,20 +19,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-oauth2-resource-server</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>net.devh</groupId>
-            <artifactId>grpc-server-spring-boot-starter</artifactId>
-            <version>3.0.0.RELEASE</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.example</groupId>
             <artifactId>proto-models</artifactId>
             <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
 
         <dependency>
@@ -63,7 +57,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>rates-api.yml</inputSpec>
+                            <inputSpec>${project.basedir}/src/main/resources/rates-api.yaml</inputSpec>
                             <language>java</language>
                             <library>resttemplate</library>
                             <output>${project.build.directory}/generated-sources</output>
