--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -1,8 +1,7 @@
-converter-service:
-  url: ${CONVERTER_URL:http://localhost:63621}
-  converter-path: ${converter-service.url}/convert
-
-# DB_HOST, DB_PORT, DB_NAME, DB_USER, DB_PASSWORD
+grpc:
+  client:
+    converterClient:
+      address: ${CONVERTER_URL:localhost:9090}
 
 spring:
   datasource:
