--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -27,7 +27,10 @@
             <version>1.0.0</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>net.devh</groupId>
