--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -13,11 +13,11 @@ jobs:
   autotest:
     needs: [build]
     if: github.event_name == 'pull_request'
-    uses: central-university-dev/hse-ab-cicd-hw/.github/workflows/autotests-hw4.yml@main
+    uses: central-university-dev/hse-ab-cicd-hw/.github/workflows/autotests-hw5.yml@main
     with:
       chart-path: ./mychart
-      converter-image-name: orobtsovv/converter # имя образа вашего приложения
-      accounts-image-name: orobtsovv/accounts # имя образа вашего приложения
+      converter-image-name: orobtsovv/converter
+      accounts-image-name: orobtsovv/accounts
       image-tag: ${{ needs.build.outputs.docker-tag }}
   
   build:
