--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -25,6 +25,9 @@ spring:
     show-sql: false
     generate-ddl: true
 
+  main:
+    web-application-type: servlet
+
 logging:
   level:
     root: info
