--- a/converter/src/main/resources/application.yml
+++ b/converter/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 rates-service:
+  retry:
+    maxAttempts: 3
+    maxDelay: 150
+    initDelay: 50
+    multiplier: 2
   url: ${RATES_URL:http://localhost:63228}
   rates-path: ${rates-service.url}/rates
 
