--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -2,9 +2,9 @@ name: build-workflow
 run-name: ${{ github.actor }} ${{ github.event_name }}
 on:
   push:
-    branches: [ "main", "hw5" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "feedback", "main" ]
+    branches: [ "feedback" ]
 
 env:
   docker-tag: ${{ github.head_ref || github.ref_name }}-${GITHUB_SHA::7}
@@ -13,7 +13,7 @@ jobs:
   autotest:
     needs: [build]
     if: github.event_name == 'pull_request'
-    uses: central-university-dev/hse-ab-cicd-hw/.github/workflows/autotests-hw5.yml@main
+    uses: central-university-dev/hse-ab-cicd-hw/.github/workflows/autotests-hw6.yml@main
     with:
       chart-path: ./mychart
       converter-image-name: orobtsovv/converter
