add sliding window to circuit breaker; change notifications balance type to string

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -68,6 +68,8 @@ resilience4j:
         failure-rate-threshold: 50
         minimum-number-of-calls: 10
         permitted-number-of-calls-in-half-open-state: 3
+        sliding-window-type: TIME_BASED
+        sliding-window-size: 60
     instances:
       converterService:
         base-config: default
