--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -63,12 +63,12 @@ resilience4j:
   circuitbreaker:
     configs:
       default:
-        wait-duration-in-open-state:
-          seconds: 10
+        wait-duration-in-open-state: 10
         failure-rate-threshold: 50
         minimum-number-of-calls: 10
         permitted-number-of-calls-in-half-open-state: 3
         sliding-window-type: TIME_BASED
+        automatic-transition-from-open-to-half-open-enabled: true
         sliding-window-size: 60
     instances:
       converterService:
