--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -61,6 +61,10 @@
             <version>2.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.example</groupId>
