--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>accounts</artifactId>
     <dependencies>
         <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>idempotency-spring-boot-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
