add fee; implement kafka with cache for fee updates

--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>accounts</artifactId>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.example</groupId>
             <artifactId>idempotency-spring-boot-starter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
