set kafka consumer group id to random

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -36,7 +36,7 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9094}
     consumer:
-      group-id: "fee.update.group" # TODO проверить репликацию, из 1 партиции не будут читать разные поды
+      group-id: ${random.uuid}
       enable-auto-commit: false
       auto-offset-reset: latest
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
