add commentaries action

--- a/.github/workflows/autotests-hw9-logs.yml
+++ b/.github/workflows/autotests-hw9-logs.yml
@@ -134,3 +134,14 @@ jobs:
           echo "TEST_RESULTS<<EOF" >> $GITHUB_ENV
           echo "$TEST_RESULT" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
+
+      - uses: actions/github-script@v7
+        with:
+          script: |
+            const results = process.env.TEST_RESULTS
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: results
+            })
